Przyciemnienie tła przy pokazanym popupie; Fix z-indexu popupa

--- a/forum/qa-plugin/report-reason/reportReason.css
+++ b/forum/qa-plugin/report-reason/reportReason.css
@@ -5,6 +5,8 @@
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1;
+    background: rgba(180, 180, 180, 0.8);
 }
 
 .report-reason-wrapper--show {
@@ -17,7 +19,6 @@
     left: calc(50vw - (485px/2));
     background: #2c3e50;
     color: white;
-    z-index: 1;
     padding: 25px 40px;
     border-radius: 5px;
     -webkit-box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.5);
